@@ -37,7 +37,7 @@ Supported disk image formats
 * TeleDisk (without compression)
 * Nero Burning ROM (both image formats)
 * Apple 2IMG (used with Apple // emulators)
-* Virtual PC fixed size disk images
+* Virtual PC fixed size, dynamic size and differencing (undo) disk images
 
 Supported partitioning schemes
 ==============================
